fix background on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -543,6 +543,7 @@ body {
           align-items: center;
   -webkit-clip-path: polygon(0% 20%, 100% 0, 100% 80%, 0% 100%);
           clip-path: polygon(0% 20%, 100% 0, 100% 80%, 0% 100%);
+  background-color: #735698;
   background-image: url("../images/background.svg");
   /* background by SVGBackgrounds.com */
   background-attachment: fixed;
@@ -668,6 +669,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #735698;
   -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 80%, 0% 100%);
           clip-path: polygon(0% 0%, 100% 0, 100% 80%, 0% 100%);
   background-image: url("../images/background.svg");
@@ -946,6 +948,7 @@ body {
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   grid-gap: 3rem;
+  background-color: #735698;
   background-image: url("../images/background.svg");
   /* background by SVGBackgrounds.com */
   background-attachment: fixed;
@@ -1078,6 +1081,7 @@ body {
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   grid-gap: 3rem;
+  background-color: #735698;
   background-image: url("../images/background.svg");
   /* background by SVGBackgrounds.com */
   background-attachment: fixed;
@@ -1285,6 +1289,7 @@ body {
           align-items: center;
   -webkit-clip-path: polygon(0% 20%, 100% 0, 100% 100%, 0% 100%);
           clip-path: polygon(0% 20%, 100% 0, 100% 100%, 0% 100%);
+  background-color: #735698;
   background-image: url("../images/background.svg");
   /* background by SVGBackgrounds.com */
   background-attachment: fixed;
