--- a/sass/components/_quote-divider.scss
+++ b/sass/components/_quote-divider.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     clip-path: polygon(0% 20%, 100% 0, 100% 80%, 0% 100%);
+    background-color: $color-primary;
     background-image: url("../images/background.svg");
     /* background by SVGBackgrounds.com */
     background-attachment: fixed;
