--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: $color-primary;
     clip-path: polygon(0% 0%, 100% 0, 100% 80%, 0% 100%);
     background-image: url("../images/background.svg");
     /* background by SVGBackgrounds.com */
